--- a/SportsSideKick/app/src/main/res/layout-large/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_login.xml
@@ -184,7 +184,7 @@
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_weight="1"
-                                            android:text="@string/join_with_facebook"
+                                            android:text="@string/login_with_facebook"
                                             android:visibility="gone" />
 
                                         <View
@@ -227,7 +227,7 @@
                                         style="@style/facebook_login_button_phone"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:text="@string/sign_in_with_facebook"
+                                        android:text="@string/login_with_facebook"
                                         android:textAllCaps="false"
                                         android:textColor="?white"
                                         android:textSize="@dimen/font_size_16" />
@@ -237,7 +237,7 @@
                                         style="@style/facebook_login_button_phone"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:text="@string/join_with_facebook"
+                                        android:text="@string/login_with_facebook"
                                         android:visibility="gone" />
                                 </LinearLayout>
                             </RelativeLayout>
@@ -279,7 +279,6 @@
                                     android:id="@+id/bottom_buttons_container_reset"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-
                                     android:background="@drawable/button_login_login"
                                     android:clickable="true"
                                     android:visibility="invisible">
@@ -289,10 +288,9 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_centerInParent="true"
-                                        android:text="@string/reset"
+                                        android:text="@string/password_reset"
                                         android:textColor="@color/colorPrimary"
-                                        android:textSize="@dimen/font_size_18"
-                                        android:visibility="visible" />
+                                        android:textSize="@dimen/font_size_18" />
 
                                     <com.wang.avi.AVLoadingIndicatorView
                                         android:id="@+id/reset_progress_bar"
@@ -359,7 +357,7 @@
             android:layout_centerInParent="true"
             android:layout_marginEnd="1dp"
             android:gravity="center_vertical"
-            android:text="@string/join_now_sign_in"
+            android:text="@string/join_sign_in"
             android:textAllCaps="true"
             android:textColor="?white"
             android:textSize="@dimen/font_size_16" />
