--- a/SportsSideKick/app/src/main/res/layout-large/popup_login_sing_up.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_login_sing_up.xml
@@ -142,7 +142,7 @@
             android:layout_centerInParent="true"
             android:layout_marginEnd="1dp"
             android:gravity="center_vertical"
-            android:text="@string/join_now_sign_in"
+            android:text="@string/join_sign_in"
             android:textAllCaps="true"
             android:textColor="?white"
             android:textSize="@dimen/font_size_16" />
