--- a/SportsSideKick/app/src/main/res/layout-large/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_signup.xml
@@ -71,7 +71,7 @@
                         android:layout_centerHorizontal="true"
                         android:paddingBottom="@dimen/padding_8"
                         android:paddingTop="@dimen/padding_8"
-                        android:text="@string/join_with_facebook"
+                        android:text="@string/login_with_facebook"
                         android:textAllCaps="false"
                         android:textColor="?white"
                         android:textSize="@dimen/font_size_16" />
@@ -81,7 +81,7 @@
                         style="@style/facebook_login_button_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/join_with_facebook"
+                        android:text="@string/login_with_facebook"
                         android:visibility="gone" />
 
                     <RelativeLayout
@@ -106,7 +106,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_toStartOf="@+id/horizontal_divider"
-                            android:hint="@string/sign_up_first_name"
+                            android:hint="@string/first_name"
                             android:inputType="text"
                             android:textSize="@dimen/font_size_15" />
 
@@ -116,7 +116,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_toEndOf="@+id/horizontal_divider"
-                            android:hint="@string/sign_up_last_name"
+                            android:hint="@string/last_name"
                             android:inputType="text"
                             android:textSize="@dimen/font_size_15" />
 
@@ -125,7 +125,7 @@
                             style="@style/edit_text_login_phone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/sign_up_username"
+                            android:hint="@string/nickname"
                             android:layout_below="@+id/sign_up_firstname"
                             android:layout_toStartOf="@+id/horizontal_divider"
                             android:inputType="text"
@@ -138,7 +138,7 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/sign_up_firstname"
                             android:layout_toEndOf="@+id/horizontal_divider"
-                            android:hint="@string/sign_up_phone"
+                            android:hint="@string/phone"
                             android:inputType="phone"
                             android:textSize="@dimen/font_size_15"/>
 
@@ -251,7 +251,7 @@
             android:layout_centerInParent="true"
             android:layout_marginEnd="1dp"
             android:gravity="center_vertical"
-            android:text="@string/join_now_sign_in"
+            android:text="@string/join_sign_in"
             android:textAllCaps="true"
             android:textColor="?white"
             android:textSize="@dimen/font_size_16"
@@ -297,31 +297,6 @@
             android:visibility="visible"
             app:indicatorName="LineSpinFadeLoaderIndicator"/>
 
-        <RelativeLayout
-            android:id="@+id/top_buttons_container_veb_view"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/phone_background"
-            android:orientation="horizontal">
-
-
-            <TextView
-                style="@style/boldText"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:layout_marginEnd="1dp"
-                android:gravity="center_vertical"
-                android:text="@string/terms"
-                android:textAllCaps="true"
-                android:textColor="?white"
-                android:textSize="@dimen/font_size_16"
-                />
-
-
-        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
