--- a/SportsSideKick/app/src/main/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login.xml
@@ -109,7 +109,7 @@
                     style="@style/facebook_login_button_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/log_in_with_facebook"
+                    android:text="@string/login_with_facebook"
                     android:textAllCaps="false"
                     android:textColor="?white"
                     android:textSize="@dimen/font_size_16" />
@@ -119,7 +119,7 @@
                     style="@style/facebook_login_button_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/join_with_facebook"
+                    android:text="@string/login_with_facebook"
                     android:visibility="gone" />
 
 
@@ -245,7 +245,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/reset"
+            android:text="@string/password_reset"
             android:textColor="@color/colorPrimary"
             android:textSize="@dimen/font_size_18"
             android:visibility="visible" />
@@ -294,7 +294,7 @@
             android:layout_centerInParent="true"
             android:layout_marginEnd="1dp"
             android:gravity="center_vertical"
-            android:text="@string/join_now_sign_in"
+            android:text="@string/join_sign_in"
             android:textAllCaps="true"
             android:textColor="?popupsCaptionColor"
             android:textSize="@dimen/font_size_16" />
