--- a/SportsSideKick/app/src/main/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_signup.xml
@@ -31,7 +31,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="1dp"
             android:gravity="center_vertical"
-            android:text="@string/join_now_sign_in"
+            android:text="@string/join_sign_in"
             android:textAllCaps="true"
             android:textColor="?popupsCaptionColor"
             android:textSize="@dimen/font_size_16"
@@ -96,7 +96,7 @@
                 style="@style/facebook_login_button_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/join_with_facebook"
+                android:text="@string/login_with_facebook"
                 android:textAllCaps="false"
                 android:textColor="?white"
                 android:textSize="@dimen/font_size_16"/>
@@ -106,7 +106,7 @@
                 style="@style/facebook_login_button_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/join_with_facebook"
+                android:text="@string/login_with_facebook"
                 android:visibility="gone"/>
 
             <ScrollView
@@ -166,7 +166,7 @@
                         style="@style/edit_text_login_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/sign_up_first_name"
+                        android:hint="@string/first_name"
                         android:inputType="text"
                         android:textSize="@dimen/font_size_12"/>
 
@@ -175,7 +175,7 @@
                         style="@style/edit_text_login_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/sign_up_last_name"
+                        android:hint="@string/last_name"
                         android:inputType="text"
                         android:textSize="@dimen/font_size_12"/>
 
@@ -184,7 +184,7 @@
                         style="@style/edit_text_login_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/sign_up_username"
+                        android:hint="@string/nickname"
                         android:inputType="text"
                         android:textSize="@dimen/font_size_12"/>
 
@@ -202,7 +202,7 @@
                         style="@style/edit_text_login_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/sign_up_phone"
+                        android:hint="@string/phone"
                         android:inputType="phone"
                         android:textSize="@dimen/font_size_12"/>
 
@@ -291,31 +291,6 @@
             android:visibility="visible"
             app:indicatorName="LineSpinFadeLoaderIndicator"/>
 
-        <RelativeLayout
-            android:id="@+id/top_buttons_container_veb_view"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/phone_background"
-            android:orientation="horizontal">
-
-
-            <TextView
-                style="@style/boldText"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:layout_marginEnd="1dp"
-                android:gravity="center_vertical"
-                android:text="@string/terms"
-                android:textAllCaps="true"
-                android:textColor="?white"
-                android:textSize="@dimen/font_size_16"
-                />
-
-
-        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
