--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
@@ -36,7 +36,7 @@
         android:maxLines="3"
         android:padding="@dimen/padding_12"
         android:scrollHorizontally="true"
-        android:text="@string/demo_lorem_ipsum"
+        android:text="@string/lorem_ipsum"
         android:textColor="?black"
         android:textSize="@dimen/font_size_16" />
 
@@ -171,7 +171,7 @@
             android:minLines="1"
             android:padding="@dimen/padding_8"
             android:scrollHorizontally="true"
-            android:text="@string/demo_lorem_ipsum"
+            android:text="@string/lorem_ipsum"
             android:textColor="?black"
             android:textSize="@dimen/font_size_14" />
     </RelativeLayout>
