--- a/SportsSideKick/app/src/brugge/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/brugge/res/layout/fragment_news_item.xml
@@ -277,7 +277,7 @@
                     android:layout_centerVertical="true"
                     android:paddingStart="@dimen/padding_16"
                     android:layout_toEndOf="@+id/translate"
-                    android:text="@string/read_more_closed"
+                    android:text="@string/read_more"
                     android:textColor="@color/colorPrimaryVeryLight"
                     android:textSize="@dimen/font_size_10"
                     />
