--- a/SportsSideKick/app/src/main/res/layout-large/fragment_video_player.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_video_player.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="?playerBackground">
 
     <android.support.percent.PercentRelativeLayout
@@ -109,7 +110,7 @@
         android:gravity="center"
         android:lines="1"
         android:padding="@dimen/padding_8"
-        android:text="@string/default_time"
+        tools:text="00:00 / 00:00"
         android:textColor="?colorGray"
         android:textSize="@dimen/font_size_12" />
 
