--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_stash.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_stash.xml
@@ -44,7 +44,7 @@
             android:layout_weight="1"
             android:background="@color/colorPrimaryMediumLight"
             android:gravity="center"
-            android:text="@string/your_profile"
+            android:text="@string/profile"
             android:textColor="?white_semitransparent" />
 
         <TextView
@@ -55,7 +55,7 @@
             android:layout_weight="1"
             android:background="@color/colorPrimaryMediumLight"
             android:gravity="center"
-            android:text="@string/your_wallet"
+            android:text="@string/wallet"
             android:textColor="?white_semitransparent" />
 
         <TextView
@@ -65,7 +65,7 @@
             android:layout_weight="1"
             android:background="?colorPrimarySemiLight"
             android:gravity="center"
-            android:text="@string/your_stash"
+            android:text="@string/stash"
             android:textColor="?colorAccent" />
     </LinearLayout>
 
@@ -114,7 +114,7 @@
         android:layout_centerHorizontal="true"
         style="@style/boldText"
         android:textAllCaps="true"
-        android:text="@string/your_stash"
+        android:text="@string/stash"
         android:textColor="?colorAccent"
         android:textSize="@dimen/font_size_18" />
 
