--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_wallet.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_wallet.xml
@@ -39,7 +39,7 @@
             android:layout_weight="1"
             android:background="@color/colorPrimaryMediumLight"
             android:gravity="center"
-            android:text="@string/your_profile"
+            android:text="@string/profile"
             android:textColor="?white_semitransparent" />
 
         <TextView
@@ -50,7 +50,7 @@
             android:layout_weight="1"
             android:background="?colorPrimarySemiLight"
             android:gravity="center"
-            android:text="@string/your_wallet"
+            android:text="@string/wallet"
             android:textColor="?colorAccent" />
 
         <TextView
@@ -60,7 +60,7 @@
             android:layout_weight="1"
             android:background="@color/colorPrimaryMediumLight"
             android:gravity="center"
-            android:text="@string/your_stash"
+            android:text="@string/stash"
             android:textColor="?white_semitransparent" />
     </LinearLayout>
 
