--- a/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="?playerBackground">
 
     <android.support.percent.PercentRelativeLayout
@@ -42,24 +43,6 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/time_info"
         android:layout_alignParentEnd="true">
-
-        <Button
-            android:id="@+id/playlist_button"
-            android:layout_width="@dimen/width_85"
-            android:layout_height="@dimen/height_25"
-            android:padding="@dimen/padding_4"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/margin_10"
-            android:minHeight="@dimen/height_25"
-            android:layout_marginStart="@dimen/margin_10"
-            android:layout_marginEnd="@dimen/margin_10"
-            android:layout_marginTop="@dimen/margin_20"
-            android:text="@string/playlist"
-            android:textAllCaps="true"
-            android:textSize="@dimen/font_size_10"
-            android:textColor="@color/white"
-            style="?videoChatButtonStyle"/>
 
         <ImageView
             android:id="@+id/play_button"
@@ -109,7 +92,7 @@
         android:gravity="center"
         android:lines="1"
         android:padding="@dimen/padding_8"
-        android:text="@string/default_time"
+        tools:text="00:00 / 00:00"
         android:textColor="?colorGray"
         android:textSize="@dimen/font_size_12" />
 
