--- a/SportsSideKick/app/src/main/res/layout/popup_your_stash.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_stash.xml
@@ -44,7 +44,7 @@
             android:layout_centerInParent="true"
             android:textStyle="bold"
             android:textColor="?popupsCaptionColor"
-            android:text="@string/your_profile" />
+            android:text="@string/profile" />
         <RelativeLayout
             android:id="@+id/back_button_holder"
             android:layout_width="wrap_content"
@@ -153,7 +153,7 @@
         android:layout_centerHorizontal="true"
         style="@style/boldText"
         android:textAllCaps="true"
-        android:text="@string/your_stash"
+        android:text="@string/stash"
         android:textColor="?colorAccent"
         android:textSize="@dimen/font_size_18" />
 
