--- a/SportsSideKick/app/src/main/res/layout/popup_your_wallet.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_wallet.xml
@@ -28,7 +28,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:text="@string/your_profile"
+                    android:text="@string/profile"
                     android:textColor="?popupsCaptionColor"
                     android:textStyle="bold" />
 
