--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -83,7 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
-                    android:text="@string/demo_number_1"
+                    tools:text="204"
                     android:textSize="@dimen/font_size_10" />
 
                 <android.support.v7.widget.AppCompatImageView
@@ -106,7 +106,7 @@
                     android:id="@+id/likes_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/demo_number_2"
+                    tools:text="6901"
                     android:textSize="@dimen/font_size_10" />
 
             </LinearLayout>
