extract hardcoded strings

--- a/SportsSideKick/app/src/main/res/layout-large/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_login.xml
@@ -184,7 +184,7 @@
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_weight="1"
-                                            android:text="@string/login_with_facebook"
+                                            android:text="@string/login_facebook"
                                             android:visibility="gone" />
 
                                         <View
@@ -227,7 +227,7 @@
                                         style="@style/facebook_login_button_phone"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:text="@string/login_with_facebook"
+                                        android:text="@string/login_facebook"
                                         android:textAllCaps="false"
                                         android:textColor="?white"
                                         android:textSize="@dimen/font_size_16" />
@@ -237,7 +237,7 @@
                                         style="@style/facebook_login_button_phone"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:text="@string/login_with_facebook"
+                                        android:text="@string/login_facebook"
                                         android:visibility="gone" />
                                 </LinearLayout>
                             </RelativeLayout>
