--- a/SportsSideKick/app/src/main/res/layout/dialog_layout.xml
+++ b/SportsSideKick/app/src/main/res/layout/dialog_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:clickable="true">
 
     <RelativeLayout
@@ -19,7 +20,7 @@
             android:layout_marginStart="@dimen/margin_80"
             android:layout_marginTop="@dimen/margin_20"
             android:gravity="center"
-            android:text="CAPTION"
+            tools:text="Title"
             android:textAllCaps="true"
             android:textColor="?colorAccent" />
 
@@ -35,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/dialog_caption"
             android:layout_marginBottom="@dimen/margin_20"
-            android:text="CONTENT"
+            tools:text="Content"
             android:layout_marginEnd="@dimen/margin_40"
             android:layout_marginStart="@dimen/margin_40"
             android:layout_marginTop="@dimen/margin_20"
