--- a/SportsSideKick/app/src/main/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_signup.xml
@@ -96,7 +96,7 @@
                 style="@style/facebook_login_button_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/login_with_facebook"
+                android:text="@string/login_facebook"
                 android:textAllCaps="false"
                 android:textColor="?white"
                 android:textSize="@dimen/font_size_16"/>
@@ -106,7 +106,7 @@
                 style="@style/facebook_login_button_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/login_with_facebook"
+                android:text="@string/login_facebook"
                 android:visibility="gone"/>
 
             <ScrollView
