--- a/SportsSideKick/app/src/main/res/layout-large/comment_item.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/comment_item.xml
@@ -51,7 +51,7 @@
             android:layout_marginStart="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_5"
             android:layout_toEndOf="@+id/message_information"
-            android:text="Translate"
+            android:text="@string/translate"
             android:textColor="?colorGray"
             android:textSize="@dimen/font_size_10"
             />
