--- a/SportsSideKick/app/src/main/res/layout-large/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_signup.xml
@@ -71,7 +71,7 @@
                         android:layout_centerHorizontal="true"
                         android:paddingBottom="@dimen/padding_8"
                         android:paddingTop="@dimen/padding_8"
-                        android:text="@string/login_with_facebook"
+                        android:text="@string/login_facebook"
                         android:textAllCaps="false"
                         android:textColor="?white"
                         android:textSize="@dimen/font_size_16" />
@@ -81,7 +81,7 @@
                         style="@style/facebook_login_button_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/login_with_facebook"
+                        android:text="@string/login_facebook"
                         android:visibility="gone" />
 
                     <RelativeLayout
