--- a/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,7 +22,7 @@
             android:layout_height="match_parent"
             android:background="@color/colorGrayMediumLight"
             android:gravity="center_vertical|center_horizontal"
-            android:text="Create New Post"
+            android:text="@string/create"
             android:textColor="@color/colorPrimaryVeryLight"
             android:textSize="@dimen/font_size_18" />
 
@@ -69,7 +70,7 @@
         android:layout_alignBottom="@+id/content_image"
         android:padding="@dimen/padding_10"
         android:visibility="gone"
-        android:text="remove" />
+        android:text="@string/delete" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/author_user_image"
@@ -138,7 +139,7 @@
         android:gravity="center_vertical"
         android:layout_toEndOf="@+id/author_user_image"
         android:ellipsize="end"
-        android:text="Chris Reeves"
+        tools:text="Chris Reeves"
         android:textColor="@color/colorGray"
         android:textSize="@dimen/font_size_12" />
 
@@ -152,7 +153,7 @@
         android:layout_marginStart="@dimen/margin_15"
         android:layout_marginTop="@dimen/margin_5"
         android:background="@null"
-        android:hint="Click here to enter your post's title"
+        android:hint="@string/post_title_hint"
         android:textColor="@color/colorPrimaryVeryLight"
         android:textColorHint="@color/colorPrimaryVeryLight"
         android:textSize="@dimen/font_size_18"
@@ -171,7 +172,7 @@
         android:animateLayoutChanges="true"
         android:background="@null"
         android:textSize="@dimen/font_size_16"
-        android:hint="Click here to start writing your post..."
+        android:hint="@string/post_body_hint"
         android:textColorHint="@color/black"
         android:textColor="@color/black" />
 
