--- a/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
@@ -446,7 +446,7 @@
                         android:layout_alignBottom="@+id/wallNotificationsToggle"
                         android:layout_toEndOf="@+id/wallNotificationsToggle"
                         android:layout_height="wrap_content"
-                        android:text="Wall notifications"
+                        android:text="@string/notify_wall"
                         android:textColor="@color/white" />
 
                 </RelativeLayout>
