--- a/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
@@ -1,9 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@color/colorPrimaryMediumLight"
     android:layout_height="@dimen/height_60"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorPrimaryMediumLight">
 
     <RelativeLayout
         android:id="@+id/image_holder"
@@ -24,33 +24,36 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/margin_20"
         android:layout_toEndOf="@+id/image_holder"
-        android:layout_toStartOf="@+id/deny_button"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true">
+        android:layout_toStartOf="@+id/deny_button">
+
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="name"
-            android:textColor="?friendItemTextColor"/>
+            tools:text="Name"
+            android:textColor="?friendItemTextColor" />
+
         <TextView
             android:id="@+id/date_prefix"
-            android:layout_below="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="?friendItemTextColor"
-            android:text="@string/requested_on"/>
+            android:layout_below="@+id/name"
+            android:text="@string/requested_on"
+            android:textColor="?friendItemTextColor" />
+
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
-            android:layout_marginStart="@dimen/margin_5"
             android:layout_height="wrap_content"
             android:layout_below="@+id/name"
+            android:layout_marginStart="@dimen/margin_5"
             android:layout_toEndOf="@+id/date_prefix"
-            android:text="date"
-            android:textColor="?friendItemTextColor"/>
+            tools:text="Dec 1"
+            android:textColor="?friendItemTextColor" />
     </RelativeLayout>
 
     <ImageButton
@@ -59,10 +62,10 @@
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
+        android:layout_marginBottom="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_16"
         android:background="@null"
         android:scaleType="centerInside"
-        android:layout_marginTop="@dimen/margin_16"
-        android:layout_marginBottom="@dimen/margin_16"
         app:srcCompat="@drawable/friend_request_accept" />
 
     <ImageButton
@@ -70,19 +73,18 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
+        android:layout_marginBottom="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_16"
+        android:layout_toStartOf="@+id/confirm_button"
         android:background="@null"
         android:scaleType="centerInside"
-        android:layout_toStartOf="@+id/confirm_button"
-        android:layout_marginTop="@dimen/margin_16"
-        android:layout_marginBottom="@dimen/margin_16"
         app:srcCompat="@drawable/friend_request_clear" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
         android:layout_height="@dimen/height_1"
-        android:background="@color/black"
-        />
+        android:layout_alignParentBottom="true"
+        android:background="@color/black" />
 
 
 </RelativeLayout>
