--- a/SportsSideKick/app/src/main/res/layout/next_match_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/next_match_view.xml
@@ -113,7 +113,8 @@
                     android:minHeight="@dimen/height_30"
                     android:minWidth="@dimen/width_60"
                     android:paddingEnd="@dimen/padding_2"
-                    android:text="BEN"
+                    tools:text="BEN"
+                    android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     app:autoSizeMaxTextSize="@dimen/font_size_28"
@@ -159,7 +160,8 @@
                     android:minHeight="@dimen/height_30"
                     android:minWidth="@dimen/width_60"
                     android:paddingStart="@dimen/padding_2"
-                    android:text="BEN"
+                    tools:text="BEN"
+                    android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     app:autoSizeMaxTextSize="@dimen/font_size_28"
@@ -175,7 +177,7 @@
                 android:layout_below="@+id/teams_info"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="@dimen/margin_10"
-                android:text=" Sun 14 Dec"
+                tools:text="Sun 14 Dec"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_size_18" />
 
@@ -190,7 +192,7 @@
                 android:layout_marginBottom="@dimen/margin_20"
                 android:gravity="center"
                 android:maxLines="1"
-                android:text="02:04:36:19"
+                tools:text="02:04:36:19"
                 android:textColor="@color/colorAccent"
                 app:autoSizeMaxTextSize="160sp"
                 app:autoSizeMinTextSize="12sp"
