shorten more string names

--- a/SportsSideKick/app/src/main/res/layout/popup_new_call.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_new_call.xml
@@ -194,7 +194,7 @@
         android:layout_height="@dimen/standard_button_height"
         android:background="@color/colorAccentLight"
         android:scaleType="centerInside"
-        android:text="@string/start_call"
+        android:text="@string/call_start"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
         android:layout_alignParentBottom="true"
