--- a/SportsSideKick/app/src/main/res/layout-large/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_video_chat.xml
@@ -226,7 +226,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/text2"
                 android:layout_centerHorizontal="true"
-                android:text="@string/video_chat_button_text"
+                android:text="@string/call_start"
                 android:textColor="@color/white" />
         </RelativeLayout>
     </RelativeLayout>
