--- a/SportsSideKick/app/src/main/res/layout-large/popup_new_call.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_new_call.xml
@@ -20,7 +20,7 @@
             android:layout_centerInParent="true"
             android:layout_marginEnd="@dimen/margin_1"
             android:gravity="center_vertical"
-            android:text="@string/starting_new_call_search_title"
+            android:text="@string/call_starting"
             android:textColor="?colorAccent"
             android:textSize="@dimen/font_size_18" />
     </RelativeLayout>
@@ -135,7 +135,7 @@
                 android:layout_marginStart="@dimen/margin_10"
                 android:layout_toEndOf="@id/search_icon"
                 android:background="?searchFieldBackgroundRef"
-                android:hint="@string/starting_new_call_search_hint"
+                android:hint="@string/chats_search"
                 android:imeOptions="flagNoExtractUi"
                 android:inputType="text"
                 android:maxLines="1"
