--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_stash.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_stash.xml
@@ -122,7 +122,7 @@
         android:id="@+id/your_stash_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/rewards_and_items_received"
+        android:text="@string/rewards_received"
         android:textColor="?stashDescriptionColorRef"
         android:textSize="@dimen/font_size_12"
         android:layout_below="@+id/your_stash_caption"
