--- a/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
@@ -319,7 +319,7 @@
                 android:layout_marginBottom="@dimen/margin_70"
                 android:alpha="0.7"
                 android:padding="@dimen/padding_8"
-                android:text="@string/video_chat_button_text"
+                android:text="@string/call_start"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_size_16" />
 
